# mer-summary

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: harness.md  review.md
.github/workflows/: daily-summary.yml
docs/: ARCHITECTURE.md  ARD.md  PRD.md
phases/0-mvp/: index.json  step0.md  step1.md  step2.md  step3.md  step4.md  step5.md  step6.md
scripts/: execute.py  test_execute.py
src/mer_summary/: __init__.py  __main__.py  config.py
src/mer_summary/services/: __init__.py  dedup.py  fetch.py  summarize.py  telegram.py
state/: sent_log.json
tests/: conftest.py  test_config.py  test_dedup.py  test_fetch.py  test_main.py  test_summarize.py  test_telegram.py
tests/fixtures/: naver_list_sample.json  naver_post_sample.html
