[project]
name = "mer-summary"
version = "0.0.1"
description = "블로그 URL을 받아 요약 후 텔레그램으로 전송하는 CLI"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "trafilatura>=2.0",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
]

[project.scripts]
mer-summary = "mer_summary.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mer_summary"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["scripts"]   # harness 프레임워크 도구 — 우리 책임 코드 아님 (디폴트 .venv 등은 유지)
